adding index file with css

--- a/index.html
+++ b/index.html
@@ -1,4 +1,34 @@
-<head> My name is Mashael Almoqbel</head>
+<html>
+<head>
+<style>
+h1 {
+    color: black;
+    text-align:center;
+    }
 
-<p>and this is my third homework where we need to create a website and post it
-on github servers.</p>
+    body {
+        background-color: aliceblue;
+        text-align:center;
+	}
+
+	p {
+	    color: navy;
+         text-align:center;
+         font-size: x-large;
+	    }
+	    h3{color: navy;
+      text-align:center;
+      }
+	    
+	    </style>
+</head>
+		
+	<h1> Mashael Almoqbel </h1>
+	<h1> Welcome to my Webpage! </h1>
+ <div>
+	<p> My name is Mashael and I am from Saudi Arabia. I came to the states about three years ago and lived a while in Iowa to work on my English and GRE. I live in NJ with my husband and baby whom I love to spend time with. We like to barbeque, play mini golf, and travel a lot! </p>
+	<p> My major is Information Systems and I have a background in management and accounting. I have learned Java and SQL and would love to learn more programming languages. I have an experience of one year and a half as a teaching assistant and I would like to work in academia. </p>
+ </div>
+<h3> Helpful links: </h3>
+<a href="https://www.njit.edu ">NJIT website</a>
+</html>
